--- a/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
@@ -47,6 +47,8 @@
 %%%%
 
 
+% Bayes files all here: /home/students/jeanfeng/descent-based-optimization/code_submission_nonsmooth/script_out
+
 \begin{document}
 
 \def\spacingset#1{\renewcommand{\baselinestretch}%
@@ -445,8 +447,8 @@ The simulation results in Section~\ref{sec:results} show that joint optimization
 	\hline
 	& Validation Error & Test Error & \# Solves\\
 	\hline
-	% bayes: script_out/sparse_hc0_new_numsolves.out
-	GD & 23.87 (0.97) & 26.10 (0.86) & 13.07 \\
+	% bayes: script_out/sparse_hc0.out
+	GD & 28.31 (0.89) & 29.43 (0.92) & 10.13 \\
 	\hline
 	% bayes: script_out/sparse_nm0.out
 	NM & 28.86 (1.04) & 29.97 (0.96) & 100 \\
