--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
@@ -425,4 +425,13 @@ squares (NIPALS) approach},
   publisher={JSTOR}
 }
 
+@article{cvxpy,
+  author  = {Steven Diamond and Stephen Boyd},
+  title   = {{CVXPY}: A {P}ython-Embedded Modeling Language for Convex Optimization},
+  journal = {Journal of Machine Learning Research},
+  year    = {2016},
+  volume  = {17},
+  number  = {83},
+  pages   = {1--5},
+}
 
