--- a/jcgs_reviewer_round2/reviewer_2.tex
+++ b/jcgs_reviewer_round2/reviewer_2.tex
@@ -33,7 +33,12 @@
 		\reply We have updated this discussion to accurately reflect the results in Section 3. We have reproduced the updated paragraph below:
 		
 		\begin{quote}
-				In some of the examples, the models with many penalty parameters fit by gradient descent have much smaller validation errors compared to the test errors. ... There are two reasons for this behavior. ... The second reason is that gradient descent can effectively find a near minimizer on the validation data in contrast to Nelder-mead. By failing to minimize the validation loss, using Nelder-mead is similar to ending gradient descent before it has reached convergence. This technique called ``early stopping'' is another form of regularization that can control the degree of over-optimism (Yao et al. 2007). Hence the difference between the validation and test error is greater in gradient descent compared to Nelder-mead. Spearmint can also give large differences between the validation and test losses. However it is unable to sufficiently minimize the validation loss so over-optimism dominates and the test loss remains high.
+			In some of the examples, the models with many penalty parameters fit by gradient descent have much smaller validation errors compared to the test errors. ... There are two reasons for this behavior. ... The second reason is that gradient descent can effectively find a near minimizer on the validation data in contrast to Nelder-mead. By failing to minimize the validation loss, using Nelder-mead is similar to ending gradient descent before it has reached convergence. This technique called ``early stopping'' is another form of regularization that can control the degree of over-optimism (Yao et al. 2007). Hence the difference between the validation and test error is greater in gradient descent compared to Nelder-mead.
+				
+			Spearmint can also give large differences between the validation and test losses, sometimes even larger than gradient descent.
+			We think this is because Spearmint performs a more global search over the penalty parameter space when it tries to minimize the validation loss; in contrast, gradient descent tunes the penalty parameters in a more local fashion, taking small steps away from the initialized values.
+			Thus Spearmint may actually increase the model space more than gradient descent.
+			Moreover, without gradient information, Spearmint struggles to shrink the validation loss and, consequently, over-optimism dominates.
 		\end{quote}
 		
 	\end{enumerate}
